--- a/platformio.ini
+++ b/platformio.ini
@@ -4,8 +4,7 @@
 ; CLOCK_PIN = pin/GPIO for the LED strip clock channel, specific [board] section
 ; LED_POWER_PIN = pin/GPIO for external relay power control, it will turn off (low state) if no serial data is received after 5 seconds
 ; LED_POWER_INVERT = if defined: off state is a high signal for the power relay, on state is a low signal
-DATA_PIN = 16
-LED_POWER_PIN = 12
+
 ; MULTI-SEGMENT SUPPORT
 ; You can define second segment to handle. Add following parameters (with -D prefix to the build_flags sections).
 ; SECOND_SEGMENT_START_INDEX = start index of the second segment
@@ -37,7 +36,7 @@ lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [env:SK6812_RGBW_COLD]
-build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=2 ${env.build_flags}
+build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=16 -DLED_POWER_PIN=12 ${env.build_flags}
 custom_prog_version = esp32_SK6812_RGBW_COLD
 
 board = esp32dev
